Changes for 3.2.1rc1

New features:
A.F....... [ZBX-1357] updated French, Italian translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBX-11136] increased width of input fields (Sasha)

Bug fixes:
..F....... [ZBX-9068] fixed forms behaviour when enter key is pressed (Sasha)
...G...PS. [ZBX-11245] fixed escaped double quote parsing in quoted parameters in array in item key parameters (gleb)
....I..... [ZBX-11175] fixed compilation failure for OpenBSD 5.8, 5.9, 6.0 (vlad)
..F....... [ZBX-11137] fixed validation of new host group when creating/updating template (Gunars)
..F....... [ZBX-11050] changed translation string "Acknowledges" => "Acknowledgements" (Cemeris)
A......... [ZBX-11196] implemented dynamic default sortorder for icon mappings, now default sortorder increases by one with each entry of mapping (Cemeris)
..F....... [ZBX-11202] fixed timeline in Problem view which shows "Yesterday" instead of "Today" (Sasha)
..F....... [ZBX-11120] fixed checkbox functionality and display of undefined indexes in trigger expression and recovery expression constructor (Ivo)
A......... [ZBX-10758] added converting of SNMP lld rules in XML import (Sasha)
..F....... [ZBX-11131] removed mistaken support of {ITEM.VALUE} and {ITEM.LASTVALUE} macros in trigger URLs (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.0

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), Hebrew, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.0rc2

Bug fixes:
........S. [ZBX-11182] fixed creating of recovery expressions for triggers created from trigger prototypes (Sasha)
..F....... [ZBX-11182] added possibility to open lld-created trigger from list of items (Sasha)